# wsdiff

./: .gitignore  LICENSE.md  README.md  example.html  example.py  example_old.py  html_diff.py  pyproject.toml
src/: wsdiff.py
